[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://addons/GodotTIE/text_interface_engine.gd" type="Script" id=2]
[ext_resource path="res://addons/GodotTIE/GodotTIE_icon.png" type="Texture" id=3]
[ext_resource path="res://assets/Cave-Story.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]

font/size = 31
font/use_mipmaps = false
font/use_filter = false

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]

font/size = 40
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]

font/size = 48
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]

font/size = 30
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]

font/size = 30
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]

font/size = 48
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[node name="UI" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1026.0
margin/bottom = 105.0
custom_constants/margin_top = 20

[node name="Alphabet" type="ReferenceFrame" parent="MarginContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 2 )
margin/left = 8.0
margin/top = 20.0
margin/right = 1026.0
margin/bottom = 105.0
script/script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
SCROLL_ON_MAX_LINES = true
BREAK_ON_MAX_LINES = true
AUTO_SKIP_WORDS = true
LOG_SKIPPED_LINES = true
SCROLL_SKIPPED_LINES = false
FONT = SubResource( 3 )
PRINT_INPUT = true
BLINKING_INPUT = true
INPUT_CHARACTERS_LIMIT = -1

[node name="CenterContainer" type="CenterContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 181.0
margin/top = 831.0
margin/right = 1922.0
margin/bottom = 1081.0
use_top_left = false

[node name="TextInterfaceEngine" type="ReferenceFrame" parent="CenterContainer"]

rect/min_size = Vector2( 800, 250 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 470.0
margin/top = 0.0
margin/right = 1270.0
margin/bottom = 250.0
script/script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
SCROLL_ON_MAX_LINES = true
BREAK_ON_MAX_LINES = true
AUTO_SKIP_WORDS = true
LOG_SKIPPED_LINES = true
SCROLL_SKIPPED_LINES = false
FONT = SubResource( 4 )
PRINT_INPUT = true
BLINKING_INPUT = true
INPUT_CHARACTERS_LIMIT = -1

[node name="MarginContainer_left" type="MarginContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1092.0
margin/top = 51.0
margin/right = 1482.0
margin/bottom = 167.0

[node name="variables_left" type="ReferenceFrame" parent="MarginContainer_left"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 0.0
margin/right = 390.0
margin/bottom = 116.0
script/script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
SCROLL_ON_MAX_LINES = true
BREAK_ON_MAX_LINES = true
AUTO_SKIP_WORDS = true
LOG_SKIPPED_LINES = true
SCROLL_SKIPPED_LINES = false
FONT = SubResource( 5 )
PRINT_INPUT = true
BLINKING_INPUT = true
INPUT_CHARACTERS_LIMIT = -1

[node name="MarginContainer_right" type="MarginContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1505.0
margin/top = 49.0
margin/right = 1895.0
margin/bottom = 165.0

[node name="variables_right" type="ReferenceFrame" parent="MarginContainer_right"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 0.0
margin/right = 390.0
margin/bottom = 116.0
script/script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
SCROLL_ON_MAX_LINES = true
BREAK_ON_MAX_LINES = true
AUTO_SKIP_WORDS = true
LOG_SKIPPED_LINES = true
SCROLL_SKIPPED_LINES = false
FONT = SubResource( 5 )
PRINT_INPUT = true
BLINKING_INPUT = true
INPUT_CHARACTERS_LIMIT = -1

[node name="MarginContainer_quantity" type="MarginContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1225.0
margin/top = 6.0
margin/right = 1328.0
margin/bottom = 40.0

[node name="quantity" type="ReferenceFrame" parent="MarginContainer_quantity"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 0.0
margin/right = 103.0
margin/bottom = 34.0
script/script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
SCROLL_ON_MAX_LINES = true
BREAK_ON_MAX_LINES = true
AUTO_SKIP_WORDS = true
LOG_SKIPPED_LINES = true
SCROLL_SKIPPED_LINES = false
FONT = SubResource( 6 )
PRINT_INPUT = true
BLINKING_INPUT = true
INPUT_CHARACTERS_LIMIT = -1

[node name="MarginContainer_abilities" type="MarginContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1655.0
margin/top = 5.0
margin/right = 1758.0
margin/bottom = 39.0

[node name="abilities" type="ReferenceFrame" parent="MarginContainer_abilities"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 0.0
margin/right = 103.0
margin/bottom = 34.0
script/script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
SCROLL_ON_MAX_LINES = true
BREAK_ON_MAX_LINES = true
AUTO_SKIP_WORDS = true
LOG_SKIPPED_LINES = true
SCROLL_SKIPPED_LINES = false
FONT = SubResource( 7 )
PRINT_INPUT = true
BLINKING_INPUT = true
INPUT_CHARACTERS_LIMIT = -1

[node name="CenterCOMA" type="CenterContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 99.0
margin/right = 1922.0
margin/bottom = 513.0
use_top_left = false

[node name="COMA" type="ReferenceFrame" parent="CenterCOMA"]

rect/min_size = Vector2( 1000, 200 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 459.0
margin/top = 107.0
margin/right = 1459.0
margin/bottom = 307.0
script/script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
SCROLL_ON_MAX_LINES = true
BREAK_ON_MAX_LINES = true
AUTO_SKIP_WORDS = true
LOG_SKIPPED_LINES = true
SCROLL_SKIPPED_LINES = false
FONT = SubResource( 8 )
PRINT_INPUT = true
BLINKING_INPUT = true
INPUT_CHARACTERS_LIMIT = -1


